restart_log.txt
reboot
2024/01/10 13:50:01 リブート
2024/01/10 14:00:01 リブート
2024/01/10 14:10:01 リブートしない
2024/01/10 14:20:01 リブート
2024/01/10 14:30:01 リブート
2024/01/10 14:40:01 リブートしない
2024/01/10 14:50:01 リブートしない
2024/01/10 15:00:01 リブートしない
  File "/home/tab/agri/autorestart.py", line 31
    def main()
              ^
SyntaxError: invalid syntax
2
2024/01/10 15:20:01 リブートしない
1
2024/01/10 15:30:02 リブート
2
2024/01/10 15:40:01 リブートしない
2
2024/01/10 15:50:01 リブートしない
2
2024/01/10 16:00:01 リブートしない
2
2024/01/10 16:10:01 リブートしない
1
2024/01/10 16:20:01 リブート
1
2024/01/10 16:30:02 リブート
0
2024/01/10 16:40:01 リブートしない
0
2024/01/10 16:50:01 リブートしない
0
2024/01/10 17:00:01 リブートしない
1
2024/01/11 03:00:01 リブート
1
2024/01/11 13:40:02 リブート
